--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <section>
                 <div>
                     <h2>CANAIS & STREAMERS</h2>
-                    <p>Lista de canais e transmissões que acompanho!</p>
+                    <p>Canais e transmissões que acompanho!</p>
 
                     <ul class="channel-list">
                         <li>
